BUGFIX: spacing in front of card's name

--- a/src/sass/Molecules/_card.scss
+++ b/src/sass/Molecules/_card.scss
@@ -55,7 +55,7 @@
     position: absolute;
     top: $size--large;
     width: 35%;
-    padding: $size--small;
+    padding: $size--small $size--small $size--small $size--medium;
 
     color: color(white);
     font-weight: bold;
